# models/itensVendas.go
@@ -1,14 +1,13 @@
 package models
 
-type ItensVendaBase struct {
-	ProdutoID  int     `json:"produto_id" gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;not null"`
-	Quantidade int     `json:"quantidade" validate:"nonnil" gorm:"not null"`
-	Preco      float64 `json:"preco" validate:"nonnull" gorm:"not null"`
-}
+import "gorm.io/gorm"
 
 type ItensVenda struct {
-	ItemID  uint `gorm:primaryKey`
-	VendaID int  `gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;not null"`
-	ItensVendaBase
-	Produto Produto `gorm:"not null"`
+	gorm.Model
+	VendaID    uint
+	Venda      Venda `gorm:"foreignKey:VendaID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;not null"`
+	ProdutoID  uint
+	Produto    Produto `gorm:"foreignKey:ProdutoID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;not null"`
+	Quantidade int     `validate:"nonnil"`
+	Preco      float64 `validate:"nonnil"`
 }
